<resources>
    <string name="app_name">Активисты тьюринга</string>

    <string name="add_button_text">Добавить активиста</string>
    <string name="add_person_button_text">Добавить</string>
    <string name="delete_person_text">Удалить</string>
    <string name="fuck_off_text">Пойти нахуй</string>
    <string name="delalis_person_msg">%1$s шлет тебя нахуй</string>

    <string name="turing_person_name_string">%1$s %2$s, %3$d</string>
    <string name="position_curator">Куратор</string>
    <string name="position_student">Студент</string>

    <string name="person_name"><b>Имя</b></string>
    <string name="person_surname"><b>Фамилия</b></string>
    <string name="person_age"><b>Возраст</b></string>
    <string name="avatar_url"><b>Ссылка на картинку</b></string>
    <string name="fill_all_fields_toast">Заполни все поля ублюдок</string>
</resources>