<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTuringPersonActivity">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/person_name"
        app:layout_constraintBottom_toTopOf="@id/nameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/surnameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/surnameTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/person_surname"
        app:layout_constraintBottom_toTopOf="@id/surnameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surnameTextView"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/person_age"
        app:layout_constraintBottom_toTopOf="@+id/ageEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnameEditText"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/positionRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageTextView"
        app:layout_constraintWidth_percent="0.8" />

    <RadioGroup
        android:id="@+id/positionRadioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ageEditText"
        app:layout_constraintWidth_percent="0.8">

        <RadioButton
            android:id="@+id/curatorRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position_curator"
            android:checked="true" />

        <RadioButton
            android:id="@+id/studentRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position_student" />
    </RadioGroup>

    <TextView
        android:id="@+id/avatarUrlTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/avatar_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/positionRadioGroup"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/avatarUrlEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarUrlTextView"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/addPersonButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/add_person_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />


</android.support.constraint.ConstraintLayout>